# drawer

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: codacy-coverage-reporter.yml  codeql.yml  cpp_artifacts.yml  cpp_artifacts_ubuntu.yml  cpp_artifacts_windows.yml  cpp_build_test.yml  cpp_build_test_ubuntu.yml  cpp_build_test_windows.yml
cmake/: improc_drawer.pc.in  improc_drawer_config.cmake.in
include/improc/drawer/: base_drawer.hpp  element_drawer.hpp  grid_drawer.hpp  image_file_drawer.hpp  layout_drawer.hpp  logger_drawer.hpp  metric_pixel_converter.hpp  metric_pixel_json_converter.hpp  page_drawer.hpp  page_drawer_type.hpp  page_element_drawer.hpp  qrcode_drawer.hpp  rotation_type.hpp
include/improc/drawer/drawer_types/: barcode_drawer.hpp  data_matrix_drawer.hpp  image_file_drawer.hpp  qrcode_drawer.hpp  text_drawer.hpp
include/improc/drawer/engine/: base_drawer.hpp  element_drawer.hpp  grid_drawer.hpp  metric_pixel_converter.hpp  metric_pixel_json_converter.hpp  page_drawer.hpp  page_drawer_type.hpp  page_element_drawer.hpp
include/improc/drawer/parsers/: corecv_json_parser.hpp  corecv_json_parser.tpp  rotation_type.hpp
src/: barcode_drawer.cpp  base_drawer.cpp  data_matrix_drawer.cpp  element_drawer.cpp  grid_drawer.cpp  image_file_drawer.cpp  layout_drawer.cpp  metric_pixel_converter.cpp  metric_pixel_json_converter.cpp  page_drawer.cpp  page_drawer_type.cpp  page_element_drawer.cpp  qrcode_drawer.cpp  rotation_type.cpp  text_drawer.cpp
test/: CMakeLists.txt  base_drawers_def.hpp  improc_drawer_test_config.hpp.in  test_barcode_drawer.cpp  test_base_drawer.cpp  test_corecv_json_parser.cpp  test_data_matrix_drawer.cpp  test_element_drawer.cpp  test_grid_drawer.cpp  test_image_file_drawer.cpp  test_layout_drawer.cpp  test_logger_drawer.cpp  test_metric_pixel_converter.cpp  test_metric_pixel_json_converter.cpp  test_page_drawer.cpp  test_page_drawer_type.cpp  test_page_element_drawer.cpp  test_qrcode_drawer.cpp  test_rotation_type.cpp  test_text_drawer.cpp
test/data/: drawer_config.json  drawer_no_type.json  element_drawer_config copy.json  element_drawer_invalid_rotation.json  element_drawer_invalid_scale.json  element_drawer_invalid_size_height.json  element_drawer_invalid_size_width.json  grid_drawer_config.json  grid_drawer_invalid_number_x.json  grid_drawer_invalid_number_y.json  grid_drawer_invalid_spacing_x.json  grid_drawer_invalid_spacing_y.json  grid_drawer_multiple_elem.json  grid_drawer_no_cell.json  grid_drawer_no_number.json  grid_drawer_no_spacing.json  grid_drawer_outside_page.json  image_file_drawer_config.json  image_file_drawer_invalid_image_file.json  layout_drawer_config.json  layout_drawer_invalid_top_left_x.json  layout_drawer_invalid_top_left_y.json  layout_drawer_multiple_elem.json  layout_drawer_no_page_drawer_type.json  layout_drawer_no_top_left.json  layout_drawer_outside_page.json  layout_drawer_single_elem.json  metric_layout_drawer_config.json  metric_no_layout.json  metric_no_metric_unit.json  metric_no_printing_resolution.json  page_drawer_config.json  page_drawer_invalid_page_height.json  page_drawer_invalid_page_width.json  page_drawer_multiple_elem.json  page_drawer_multiple_elem_overlayed.json  page_drawer_no_page_height.json  page_drawer_no_page_size.json  page_drawer_no_page_width.json  page_drawer_outside_page.json  (+30 more)
version/: CMakeLists.txt  main.cpp  version_config.hpp.in
